--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,2 +1,30 @@
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Kangsik's Tic Tac Toe</title>
+	</head>
 
+	<body>
+		<h1>Kangsik's Tic Tac Toe</h1>
+		<table>
+			<tr class='row1'>
+				<td class='col1'></td>
+				<td class='col2'></td>
+				<td class='col1'></td>
+			</tr>
+			<tr class='row2'>
+				<td class='col1'></td>
+				<td class='col2'></td>
+				<td class='col3'></td>
+			</tr>
+			<tr class='row3'>
+				<td class='col1'></td>
+				<td class='col2'></td>
+				<td class='col3'></td>
+			</tr>
+		</table>
+
+	</body>
+
+</html>
 
