Link app.js and index.html

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -2,8 +2,9 @@
 <html>
 	<head>
 		<title>Kangsik's Tic Tac Toe</title>
+		<script src='app.js'></script>
+		<script rel='stylesheet' src='index.css'></script>
 	</head>
-
 	<body>
 		<h1>Kangsik's Tic Tac Toe</h1>
 		<table>
