Implement initialize, event handling clickBox, and other functions
1. Implement initialize function to set up initial game state
2. Implement pseudocode for 'clickBox' on click event handling function that is attached to each box
3. Implement pseudocode for other related functions to check valid move, winning move, row, colum, and diagonal complettion

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -3,25 +3,25 @@
 	<head>
 		<title>Kangsik's Tic Tac Toe</title>
 		<script src='app.js'></script>
-		<script rel='stylesheet' src='index.css'></script>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
 		<h1>Kangsik's Tic Tac Toe</h1>
 		<table>
-			<tr class='row1'>
-				<td class='col1'></td>
-				<td class='col2'></td>
-				<td class='col1'></td>
+			<tr class='row'>
+				<td class='col1'>1</td>
+				<td class='col2'>1</td>
+				<td class='col1'>1</td>
 			</tr>
-			<tr class='row2'>
-				<td class='col1'></td>
-				<td class='col2'></td>
-				<td class='col3'></td>
+			<tr class='row'>
+				<td class='col1'>1</td>
+				<td class='col2'>1</td>
+				<td class='col3'>1</td>
 			</tr>
-			<tr class='row3'>
-				<td class='col1'></td>
-				<td class='col2'></td>
-				<td class='col3'></td>
+			<tr class='row'>
+				<td class='col1'>1</td>
+				<td class='col2'>1</td>
+				<td class='col3'>1</td>
 			</tr>
 		</table>
 
@@ -29,3 +29,10 @@
 
 </html>
 
+<!--
+TODOs
+1. find the way to draw lines with css
+
+
+
+-->
