--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -2,29 +2,31 @@
 <html>
 	<head>
 		<title>Kangsik's Tic Tac Toe</title>
-		<script src='app.js'></script>
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel='stylesheet' href='style.css'/>
 	</head>
 	<body>
 		<h1>Kangsik's Tic Tac Toe</h1>
+		<h2 class="gameStatus">GAME STATUS</h2>
+		<h3 class='turn'>Turn: Player ???</h3>
+
 		<table>
-			<tr class='row'>
+			<tr class='row0'>
+				<td class='col0'>1</td>
 				<td class='col1'>1</td>
 				<td class='col2'>1</td>
-				<td class='col1'>1</td>
 			</tr>
-			<tr class='row'>
+			<tr class='row1'>
+				<td class='col0'>1</td>
 				<td class='col1'>1</td>
 				<td class='col2'>1</td>
-				<td class='col3'>1</td>
 			</tr>
-			<tr class='row'>
+			<tr class='row2'>
+				<td class='col0'>1</td>
 				<td class='col1'>1</td>
 				<td class='col2'>1</td>
-				<td class='col3'>1</td>
 			</tr>
 		</table>
-
+	<script src='app.js'></script>
 	</body>
 
 </html>
@@ -32,7 +34,7 @@
 <!--
 TODOs
 1. find the way to draw lines with css
-
+1. find the wa
 
 
 -->
