--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -11,19 +11,19 @@
 
 		<table>
 			<tr class='row0'>
-				<td class='col0'>1</td>
-				<td class='col1'>1</td>
-				<td class='col2'>1</td>
+				<td class='col0'></td>
+				<td class='col1'></td>
+				<td class='col2'></td>
 			</tr>
 			<tr class='row1'>
-				<td class='col0'>1</td>
-				<td class='col1'>1</td>
-				<td class='col2'>1</td>
+				<td class='col0'></td>
+				<td class='col1'></td>
+				<td class='col2'></td>
 			</tr>
 			<tr class='row2'>
-				<td class='col0'>1</td>
-				<td class='col1'>1</td>
-				<td class='col2'>1</td>
+				<td class='col0'></td>
+				<td class='col1'></td>
+				<td class='col2'></td>
 			</tr>
 		</table>
 	<script src='app.js'></script>
