Finished Bare minimums

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -8,7 +8,7 @@
 		<h1>Kangsik's Tic Tac Toe</h1>
 		<h2 class="gameStatus">GAME STATUS</h2>
 		<h3 class='turn'>Turn: Player ???</h3>
-
+		<button>New Game</button>
 		<table>
 			<tr class='row0'>
 				<td class='col0'></td>
