Add score board to game view

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -7,6 +7,11 @@
 	<body>
 		<h1>Kangsik's Tic Tac Toe</h1>
 		<h2 class="gameStatus">GAME STATUS</h2>
+		
+		<div>
+			X: <span class="scorePlayer1"></span>             O: <span class="scorePlayer2"></span>
+		</div>
+
 		<h3 class='turn'>Turn: Player ???</h3>
 		<button>New Game</button>
 		<table>
