Add span tags for usernames

--- a/challenge_1/index.html
+++ b/challenge_1/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Kangsik's Tic Tac Toe</title>
 		<link rel='stylesheet' href='style.css'/>
 	</head>
@@ -9,7 +10,8 @@
 		<h2 class="gameStatus">GAME STATUS</h2>
 		
 		<div>
-			X: <span class="scorePlayer1"></span>             O: <span class="scorePlayer2"></span>
+			<span class="playerOneName">UNDEFINED</span>(X): <span class="scorePlayer1"></span>
+			<span class="playerTwoName">UNDEFINED</span>(O): <span class="scorePlayer2"></span>
 		</div>
 
 		<h3 class='turn'>Turn: Player ???</h3>
