Add html boilerplate

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -1,2 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>Kangsik's CSV Report Generator</title>
+	</head>
+	<body>
+		<h1>Kangsik's CSV Report Generator</h1>
+		
+	</body>
+</html>
 
