Add correct form element"

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -5,7 +5,10 @@
 	</head>
 	<body>
 		<h1>Kangsik's CSV Report Generator</h1>
-		
+		<form method='post' action='/'>
+			JSON text: <input type='textarea' name='userInput'/>
+			<input type='submit'/>
+		</form>
 	</body>
 </html>
 
