Implement converting JSON objec user input to CSV

--- a/challenge_2/client/index.html
+++ b/challenge_2/client/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Kangsik's CSV Report Generator</h1>
 		<form method='post' action='/'>
-			JSON text: <input type='textarea' name='userInput'/>
+			JSON text: <input id='inputFile' type='textArea' name='userInputFile' onclick='readFile' />
 			<input type='submit'/>
 		</form>
 	</body>
