Edit path for rendering file

--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -3,6 +3,7 @@
 	<head></head>
 	<body id='root'>
 		<h1>Hello!</h1>
+		<script type="module" src="../compiled/client/app.js"></script>
 	</body>
 </html>
 
