--- a/challenge_3/public/index.html
+++ b/challenge_3/public/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-	<head></head>
-	<body id='root'>
-		<h1>Hello!</h1>
-		<script type="module" src="../compiled/client/app.js"></script>
+	<head>
+		<script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
+    	<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	</head>
+	<body>
+		<div id='app'>
+			<h1>Hello! Disappear after Rendering</h1>
+		</div>
+	<script src="app.js"></script>
 	</body>
+	
 </html>
 
