Add boilerplate for html

--- a/challenge_4/public/index.html
+++ b/challenge_4/public/index.html
@@ -1,2 +1,11 @@
-
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+</head>
+<body>
+	<div id='app'>
+		<h1>This will disappear When server connects</h1>
+	</div>
+</body>
+</html>
